fix(css): align header

--- a/css/style.css
+++ b/css/style.css
@@ -148,9 +148,9 @@ button {
 .general {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  padding: 0px 24px 10px 24px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.16);
   margin-top: 31px;
-  padding-bottom: 10px;
 }
 
 .general-title {
